--- a/front/src/styles/styles.scss
+++ b/front/src/styles/styles.scss
@@ -42,7 +42,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     }
 }
 
-.articles, .topics{
+.articles, .topics, .me-subscribes{
     .mat-card-header-text{
         margin: 0;
         padding: 0;
