--- a/front/src/app/components/me/me.component.scss
+++ b/front/src/app/components/me/me.component.scss
@@ -39,6 +39,10 @@
             }
         }
 
+        .error {
+            color: red;
+        }
+
         ::ng-deep {
             .mat-form-field-appearance-outline .mat-form-field-outline,
             .mat-form-field-appearance-outline .mat-form-field-outline-thick,
