--- a/front/src/app/features/topics/components/topics-list/topics-list.component.html
+++ b/front/src/app/features/topics/components/topics-list/topics-list.component.html
@@ -19,14 +19,14 @@
                 type="button" 
                 *ngIf="!isSubscribed(topic)"
                 class="topics-card-btn"
-                (click)="subscribe(topic)">
+                (click)="subscribeToTopic(topic)">
                     S'abonner
                 </button>
                 <button mat-raised-button color="primary" 
                 type="button" 
                 *ngIf="isSubscribed(topic)"
                 class="topics-card-btn"
-                (click)="unsubscribe(topic)">
+                (click)="unsubscribeToTopic(topic)">
                     Se désabonner
                 </button>
             </div>
