--- a/front/src/app/components/layout/layout.component.scss
+++ b/front/src/app/components/layout/layout.component.scss
@@ -114,7 +114,7 @@ mat-drawer-content{
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        align-items: end;
+        align-items: flex-end;
 
         button{
             margin-bottom: 5%;
