--- a/front/src/app/features/topics/components/topics-list/topics-list.component.scss
+++ b/front/src/app/features/topics/components/topics-list/topics-list.component.scss
@@ -58,7 +58,7 @@
             width: 100%;
             display: flex;
             justify-content: center;
-            align-items: end;
+            align-items: flex-end;
         }
 
         &-btn{
