--- a/front/src/app/components/home/home.component.scss
+++ b/front/src/app/components/home/home.component.scss
@@ -40,7 +40,7 @@
 @media screen and (max-width: 640px){
     .center {
         margin-top: 10%;
-        justify-content: start;
+        justify-content: flex-start;
     }
 
     .logo{
