--- a/front/src/app/components/me/me.component.scss
+++ b/front/src/app/components/me/me.component.scss
@@ -156,7 +156,7 @@
             width: 100%;
             display: flex;
             justify-content: center;
-            align-items: end;
+            align-items: flex-end;
         }
 
         &-btn {
