--- a/front/src/app/features/auth/components/register/register.component.scss
+++ b/front/src/app/features/auth/components/register/register.component.scss
@@ -57,7 +57,7 @@
         display: flex;
         justify-content: center;
         flex-direction: column;
-        align-items: start;
+        align-items: flex-start;
 
         &-input{
             width: 100%;
