Manage btn background comment area

--- a/front/src/app/features/articles/components/articles-detail/articles-detail.component.html
+++ b/front/src/app/features/articles/components/articles-detail/articles-detail.component.html
@@ -38,7 +38,7 @@
                         Veuillez bien renseigner le message de votre commentaire
                     </mat-error>
                 </mat-form-field>
-                <button class="comment-area-submit" mat-raised-button color="primary" type="submit" [disabled]="commentForm!.invalid">
+                <button class="comment-area-submit" color="primary" type="submit" [disabled]="commentForm!.invalid">
                     <mat-icon class="send-icon">send</mat-icon>
                 </button>
             </form>
