--- a/front/src/app/features/articles/components/articles-detail/articles-detail.component.scss
+++ b/front/src/app/features/articles/components/articles-detail/articles-detail.component.scss
@@ -171,6 +171,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            border: none;
             color: rgb(103, 58, 183);
             transform: translate(0, -50%);
             background-color: transparent;
