Manage wrong article in detail page

--- a/front/src/app/shared/components/not-found/not-found.component.scss
+++ b/front/src/app/shared/components/not-found/not-found.component.scss
@@ -4,5 +4,11 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+
+    a{
+        cursor: pointer;
+        color: rgb(103, 58, 183);
+        font-weight: bold;
+    }
 }
   
