--- a/front/src/app/shared/components/not-found/not-found.component.html
+++ b/front/src/app/shared/components/not-found/not-found.component.html
@@ -1,5 +1,5 @@
 <div class="center">
     <h2>No corresponding page found</h2>
-    <a routerLink="">Go back</a>
+    <a routerLink="/">Go back</a>
 </div>
   
